--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ body {
 
 /*------------------------------Колонка и сайдбар--------------------*/
 
-.column {
+.news-field {
     margin: 25px 0 25px 0;
 }
 
